--- a/_posts/2010-11-15-3-21100.md
+++ b/_posts/2010-11-15-3-21100.md
@@ -6,19 +6,19 @@ path: 2010-11-15-3-21100.md
 tag: [normal]
 ---
 
-Not only did he have ice, but just like the monthly allowance, the ice tickets were also given to the county yamen according to rank. However, no one else in the county seemed to have his worries. Wu Ya, who dealt with the 髡人 (kūn rén - a derogatory term for the transmigrators) the most in the county, ate and drank in the yamen every day. This old fox actually drank the 髡人's (kūn rén's) "langmu" wine. Wu Ya had taken a liking to this wine and its strange way of drinking after a trip to Bairen City. It was mixed with some hissing and bubbling sour water, plus crushed ice. Sometimes a few mint leaves were added. It was said that drinking it was very comfortable for relieving summer heat and quenching thirst. He had recommended it to him several times. Wu Mingjin felt that this way of drinking, with water and fire intersecting, and ice and fire attacking each other, was not in line with the way of health preservation, so he politely declined.
+Not only did he have ice, but just like the monthly allowance, the ice tickets were also given to the county yamen according to rank. However, no one else in the county seemed to have his worries. Wu Ya, who dealt with the short-haired ones the most in the county, ate and drank in the yamen every day. This old fox actually drank the short-haired ones' "langmu" wine. Wu Ya had taken a liking to this wine and its strange way of drinking after a trip to Bairen City. It was mixed with some hissing and bubbling sour water, plus crushed ice. Sometimes a few mint leaves were added. It was said that drinking it was very comfortable for relieving summer heat and quenching thirst. He had recommended it to him several times. Wu Mingjin felt that this way of drinking, with water and fire intersecting, and ice and fire attacking each other, was not in line with the way of health preservation, so he politely declined.
 
-As for the county registrar, it was even more incredible. Wu Mingjin thought angrily: I don't know whose official he is. The registrar lived in the yamen and was at the beck and call of the 髡人 (kūn rén). He was busy running errands for them. When the 髡人 (kūn rén) went to Nanbao to open a mine, the registrar led the yamen runners to clear the way, busy running errands. If they said to prepare documents, he would prepare documents. If they said to make land deeds, he would make land deeds.
+As for the county registrar, it was even more incredible. Wu Mingjin thought angrily: I don't know whose official he is. The registrar lived in the yamen and was at the beck and call of the short-haired ones. He was busy running errands for them. When the short-haired ones went to Nanbao to open a mine, the registrar led the yamen runners to clear the way, busy running errands. If they said to prepare documents, he would prepare documents. If they said to make land deeds, he would make land deeds.
 
-Why weren't you so diligent in the past! Wu Mingjin thought resentfully. From the increasingly comfortable food and clothing of the registrar's family and his trip to Dongmen Market every "week"—this was the 髡人's (kūn rén's) way of calculating—it was true that money can make the devil push the millstone.
+Why weren't you so diligent in the past! Wu Mingjin thought resentfully. From the increasingly comfortable food and clothing of the registrar's family and his trip to Dongmen Market every "week"—this was the short-haired ones' way of calculating—it was true that money can make the devil push the millstone.
 
-Wang Ci, the county's educational official, was the most upright scholar. Wu Mingjin did not expect that he would also ask the 髡人 (kūn rén) for help. Now the hundreds of mu of school land outside the West Gate had changed hands. He secretly watched from the city wall several times—the appearance of the school land had greatly changed, which made him both happy and worried. He was happy because he had always wanted to support the literary atmosphere of Lingao, but had never been able to come up with the money. Now that the school land had been rectified, the county school's funds were secured. He was worried because the 髡人 (kūn rén), with this move, would inevitably interfere with the scholars.
+Wang Ci, the county's educational official, was the most upright scholar. Wu Mingjin did not expect that he would also ask the short-haired ones for help. Now the hundreds of mu of school land outside the West Gate had changed hands. He secretly watched from the city wall several times—the appearance of the school land had greatly changed, which made him both happy and worried. He was happy because he had always wanted to support the literary atmosphere of Lingao, but had never been able to come up with the money. Now that the school land had been rectified, the county school's funds were secured. He was worried because the short-haired ones, with this move, would inevitably interfere with the scholars.
 
-Wu Mingjin was not very concerned about the thoughts of the common people. Although he also knew sayings like "the people are precious and the ruler is light," "water can carry a boat and can also capsize it," and "the hearts of the people," the attitude of the scholars was his biggest worry. If the people who read and understood reason also had a good impression of the 髡人 (kūn rén), and even a few traitors who betrayed the teachings of the sages appeared, it would be difficult to manage the hearts of the people. Although the ancients did not have a clear theory of "ideology," they still understood the basic principles. So he had always been very worried about this.
+Wu Mingjin was not very concerned about the thoughts of the common people. Although he also knew sayings like "the people are precious and the ruler is light," "water can carry a boat and can also capsize it," and "the hearts of the people," the attitude of the scholars was his biggest worry. If the people who read and understood reason also had a good impression of the short-haired ones, and even a few traitors who betrayed the teachings of the sages appeared, it would be difficult to manage the hearts of the people. Although the ancients did not have a clear theory of "ideology," they still understood the basic principles. So he had always been very worried about this.
 
 Wu Mingjin had not read too many history books, but he had always read things like the "Zizhi Tongjian." Whenever there was a rebellion, once scholars were involved, the poison and harm would be a hundred or a thousand times greater than a few peasants rising up.
 
-There were not a few examples of scholars becoming rebels in ancient times. It was said that there were also quite a few scholars among the fake 髡人 (kūn rén)—what a disgrace to the literati! Wu Mingjin suddenly became alert—would this Educational Official Wang also be unable to resist the temptation of the 髡人 (kūn rén)? This was a major event! Lingao was a small county town, and the quota for students in the whole county was only thirty. If only a few xiucai sold themselves into service...
+There were not a few examples of scholars becoming rebels in ancient times. It was said that there were also quite a few scholars among the fake short-haired ones—what a disgrace to the literati! Wu Mingjin suddenly became alert—would this Educational Official Wang also be unable to resist the temptation of the short-haired ones? This was a major event! Lingao was a small county town, and the quota for students in the whole county was only thirty. If only a few xiucai sold themselves into service...
 
 Wu Mingjin simply dared not think about it anymore. A xiucai becoming a rebel, it seemed that there was no precedent for this in this dynasty. Thinking of this, he was restless and hurriedly ordered someone to find Educational Official Wang.
 
