--- a/_posts/2010-11-18-3-21400.md
+++ b/_posts/2010-11-18-3-21400.md
@@ -6,7 +6,7 @@ path: 2010-11-18-3-21400.md
 tag: [normal]
 ---
 
-Wang Ci could not refuse. He reasoned that regardless of the 髡贼's (kūnzéi - 髡 bandits) motives, it would be a good thing for the family. He rose and said, "On their behalf, I thank you." With that, he bowed deeply.
+Wang Ci could not refuse. He reasoned that regardless of the short-haired bandits' motives, it would be a good thing for the family. He rose and said, "On their behalf, I thank you." With that, he bowed deeply.
 
 "Hehe, you're welcome." Xiong Buyou saw his attitude soften and thought to himself that the plan was seventy or eighty percent certain. Of course, whether this pedant was willing or not wouldn't change the final outcome, but with his participation, things would proceed more smoothly. The task of winning over the local intellectuals would be much easier with the assistance of the county's education official.
 
@@ -40,7 +40,7 @@ Wang Ci's face flushed. "It is all due to my incompetence..."
 
 "This is not your fault," Xiong Buyou said breezily. "The county hasn't given you a single coin or a single grain of rice for years. To have maintained it to this point is already a great feat. For the sake of Lingao's literary spirit, Master Wang, you have truly worked your heart out and dedicated yourself completely."
 
-Hearing these words from a 髡贼 (kūnzéi), Wang Ci's eyes nearly turned red.
+Hearing these words from a short-haired bandit, Wang Ci's eyes nearly turned red.
 
 *Heaven have mercy!* he thought. *Since I came to this remote southern county of Lingao to be the education official, not a day has passed that I have not toiled. I have tried every method I could think of, soliciting donations from the gentry everywhere, wearing out several pairs of shoes, being robbed by bandits and nearly losing my life, encountering a hurricane by the sea and almost ending up as fish food, and enduring the cold faces of the gentry, all to barely keep things going until now. The county magistrate has only ever said, 'You have worked hard.' I never thought these Australians, who have only been here for a little over a year, could see things so clearly.* A sudden feeling of kinship washed over him.
 
@@ -50,7 +50,7 @@ Hearing these words from a 髡贼 (kūnzéi), Wang Ci's eyes nearly turned red.
 
 He then deliberately sighed, "If only all the officials of the Great Ming could have a clear conscience!"
 
-This remark carried a critique of the current administration. Although Wang Ci was a minor education official, he was no frog in a well. What he had seen and heard on his way to his post and during his tenure, combined with the letters from his family, friends, and classmates, made him feel that the state of affairs was deteriorating day by day. He was unwilling to comment on these matters in front of a 髡贼 (kūnzéi), so he remained silent, merely sighing.
+This remark carried a critique of the current administration. Although Wang Ci was a minor education official, he was no frog in a well. What he had seen and heard on his way to his post and during his tenure, combined with the letters from his family, friends, and classmates, made him feel that the state of affairs was deteriorating day by day. He was unwilling to comment on these matters in front of a short-haired bandit, so he remained silent, merely sighing.
 
 Xiong Buyou felt the time was right. He said, "I saw the Jasmine Pavilion next to the county school is in a state of ruin. If it is not repaired soon, I fear it will collapse, and this fine tale of Lingao's literary world will be lost..."
 
@@ -60,7 +60,7 @@ Xiong Buyou felt the time was right. He said, "I saw the Jasmine Pavilion next t
 
 "Since the county has no money, we can help repair the Jasmine Pavilion," Xiong Buyou said, seizing the opportunity.
 
-"You will repair it?" Wang Ci looked at him in surprise. What was this 髡贼's (kūnzéi's) game? Why would they help repair a building for no reason? What was in it for them?
+"You will repair it?" Wang Ci looked at him in surprise. What was this short-haired bandit's game? Why would they help repair a building for no reason? What was in it for them?
 
 "Indeed. Not just the Jasmine Pavilion, but this place as well." Xiong Buyou gestured outside. "This Confucian temple and county school of yours could also use a good renovation. Otherwise, it is quite an eyesore."
 
