--- a/_posts/2012-1-2-5-00500.md
+++ b/_posts/2012-1-2-5-00500.md
@@ -6,9 +6,9 @@ path: 2012-1-2-5-00500.md
 tag: [normal]
 ---
 
-One afternoon in early December 1630, the pale yellow sun slanted down on the White Goose Pond wharf. After the 髡贼 (kūnzéi - 髡 bandits) retreated, the market here had returned to its former prosperity. The flower boats, which had fled in a panic, had all come back, resuming their old trade. In winter, the days ended early. Though it was only three or four in the afternoon, the sun was already setting in the west. The "old hands," madams, and pimps on the flower boats were already bustling about, preparing for the evening's business.
+One afternoon in early December 1630, the pale yellow sun slanted down on the White Goose Pond wharf. After the short-haired bandits retreated, the market here had returned to its former prosperity. The flower boats, which had fled in a panic, had all come back, resuming their old trade. In winter, the days ended early. Though it was only three or four in the afternoon, the sun was already setting in the west. The "old hands," madams, and pimps on the flower boats were already bustling about, preparing for the evening's business.
 
-Scaffolding had been erected on the fire-damaged city tower, where artisans were busy rebuilding the structure that had been burned by rockets. The Five Goats Station, the official reception hall, and other buildings outside the city gate that had been destroyed by fire were also undergoing large-scale reconstruction. Pedestrians were as numerous as threads in a tapestry, and carriages and sedan chairs passed in a constant stream. The grim and desolate scene from last year, when the Australians had laid siege to the city, had vanished without a trace. Many people felt that after the 髡人's (kūn rén's - 髡 people's) visit, the four villages around Guangzhou were much more peaceful—the Fubo Army's large-scale cleanup operation on Henan Island and along the banks of the Pearl River had eliminated a great number of bandits, ruffians, and local tyrants from the countryside.
+Scaffolding had been erected on the fire-damaged city tower, where artisans were busy rebuilding the structure that had been burned by rockets. The Five Goats Station, the official reception hall, and other buildings outside the city gate that had been destroyed by fire were also undergoing large-scale reconstruction. Pedestrians were as numerous as threads in a tapestry, and carriages and sedan chairs passed in a constant stream. The grim and desolate scene from last year, when the Australians had laid siege to the city, had vanished without a trace. Many people felt that after the short-haired ones' visit, the four villages around Guangzhou were much more peaceful—the Fubo Army's large-scale cleanup operation on Henan Island and along the banks of the Pearl River had eliminated a great number of bandits, ruffians, and local tyrants from the countryside.
 
 At the entrance to the south city gate, a small sedan chair, surrounded by a dozen servants, approached from the riverside wharf near the Five Goats Station. Leading the way was a handsome young servant boy.
 
@@ -44,7 +44,7 @@ Lin Biguang lit the gas lamp in the room, and it was instantly filled with light
 
 "Alright," Xue Ziliang said. "The Executive Committee has decided to permanently solve the Gao Shunqin problem."
 
-Gao Shunqin was the most ardent "anti-foreigner" in the entire Guangzhou officialdom. Whether it was the red-haired Dutch, the Portuguese, or the Australians who had appeared out of nowhere, he wanted to expel them all. Although Censor Gao had no brilliant plan to repel the enemy when the 髡贼 (kūnzéi) were at the city gates, his uncompromising stance had won him the applause of many "angry youth" scholars in Guangzhou. Governor Li's secret "paying for the enemy's retreat" had been done covertly at the time, but rumors had recently begun to spread. Many scholars, forgetting their own pathetic state when the 髡贼 (kūnzéi) were launching rockets at the city, began to passionately denounce Governor Li's "treason for personal gain." Gao Shunqin, whose previous memorial to the throne to prohibit the Portuguese from entering the city for trade had been well-received in the capital, was now full of confidence. He was preparing to take on Li Fengjie and submit a scathing impeachment memorial.
+Gao Shunqin was the most ardent "anti-foreigner" in the entire Guangzhou officialdom. Whether it was the red-haired Dutch, the Portuguese, or the Australians who had appeared out of nowhere, he wanted to expel them all. Although Censor Gao had no brilliant plan to repel the enemy when the short-haired bandits were at the city gates, his uncompromising stance had won him the applause of many "angry youth" scholars in Guangzhou. Governor Li's secret "paying for the enemy's retreat" had been done covertly at the time, but rumors had recently begun to spread. Many scholars, forgetting their own pathetic state when the short-haired bandits were launching rockets at the city, began to passionately denounce Governor Li's "treason for personal gain." Gao Shunqin, whose previous memorial to the throne to prohibit the Portuguese from entering the city for trade had been well-received in the capital, was now full of confidence. He was preparing to take on Li Fengjie and submit a scathing impeachment memorial.
 
 "Gao Shunqin's position in the Guangdong officialdom is very important. His words and actions influence a large number of officials." Lin Biguang had wanted to get rid of Gao Shunqin for a long time. Wang Zunde was already dead from illness and no longer an obstacle to the transmigrators' control of Guangdong. But as long as Gao Shunqin remained in Guangzhou, both officials and commoners would have reservations when cooperating with Lin'gao. And a portion of the "anti-foreigner" elements—not just certain scholars, but also businessmen and artisans who had been harmed by the trade impact from Lin'gao—would rally around this banner, forming a sizable anti-Lin'gao faction.
 
